kubernetes/templates/Ingress/webservice-blue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: webserver-blue
  name: webserver-blue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webserver-blue
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: webserver-blue
    spec:
      containers:
      - image: nginx:latest
        name: nginx
        resources: {}
status: {}
