kubernetes/templates/Ingress/webservice-green.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: webserver-green
  name: webserver-green
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webserver-green
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: webserver-green
    spec:
      containers:
      - image: nginx:latest
        name: nginx
        resources: {}
status: {}
