kubernetes/templates/Ingress/webserver-green-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: webserver-green-svc
  labels:
    run: webserver-green
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: nginx
